[metadata]
description-file = README.md

####################        Tests for coverage             ###################
# have pytest look for "check" instead of "test"
[tool:pytest]
python_files = tests/test_*.py
# executing 'python setup.py test' using pytest-runner
[aliases]
test=pytest

################### .coveragerc to control coverage.py     #####################
[coverage:run]
branch = True
source = rem3d

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Don't complain about missing debug-only code:
    def __repr__
    if self.debug:

    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
ignore_errors = True
omit =
    examples/*
